--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Bronze.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Bronze.axaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Default"><Color x:Key="Accent0Color">#FDFCFC</Color>
+        <ResourceDictionary x:Key="Default">
+            <Color x:Key="Accent0Color">#FDFCFC</Color>
             <Color x:Key="Accent1Color">#FDF7F5</Color>
             <Color x:Key="Accent2Color">#F6EDEA</Color>
             <Color x:Key="Accent3Color">#EFE4DF</Color>
