--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Grass.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Grass.axaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Default"><Color x:Key="Accent0Color">#FBFEFB</Color>
+        <ResourceDictionary x:Key="Default">
+            <Color x:Key="Accent0Color">#FBFEFB</Color>
             <Color x:Key="Accent1Color">#F5FBF5</Color>
             <Color x:Key="Accent2Color">#E9F6E9</Color>
             <Color x:Key="Accent3Color">#DAF1DB</Color>
