--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Orange.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Orange.axaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Default"><Color x:Key="Accent0Color">#FEFCFB</Color>
+        <ResourceDictionary x:Key="Default">
+            <Color x:Key="Accent0Color">#FEFCFB</Color>
             <Color x:Key="Accent1Color">#FFF7ED</Color>
             <Color x:Key="Accent2Color">#FFEFD6</Color>
             <Color x:Key="Accent3Color">#FFDFB5</Color>
