--- a/src/Huskui.Avalonia/Themes/Colors.Accent.Teal.axaml
+++ b/src/Huskui.Avalonia/Themes/Colors.Accent.Teal.axaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.ThemeDictionaries>
-        <ResourceDictionary x:Key="Default"><Color x:Key="Accent0Color">#FAFEFD</Color>
+        <ResourceDictionary x:Key="Default">
+            <Color x:Key="Accent0Color">#FAFEFD</Color>
             <Color x:Key="Accent1Color">#F3FBF9</Color>
             <Color x:Key="Accent2Color">#E0F8F3</Color>
             <Color x:Key="Accent3Color">#CCF3EA</Color>
