--- a/src/Huskui.Avalonia/Controls/Toast.axaml
+++ b/src/Huskui.Avalonia/Controls/Toast.axaml
@@ -11,9 +11,8 @@
         <Setter Property="Padding" Value="{StaticResource ToastContentMargin}" />
         <Setter Property="BackgroundSizing" Value="InnerBorderEdge" />
         <Setter Property="FontWeight" Value="{StaticResource ControlFontWeight}" />
-        <Setter Property="ClipToBounds" Value="True" />
         <Setter Property="CornerRadius"
-                Value="{Binding Source={StaticResource ExtraExtraLargeCornerRadius},Converter={x:Static local:CornerRadiusConverters.Upper}}" />
+                Value="{Binding Source={StaticResource LargeCornerRadius},Converter={x:Static local:CornerRadiusConverters.Upper}}" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto" />
         <Setter Property="Template">
