refactor(Huskui.Avalonia): 优化 Toast 组件的头部背景样式
- 移除了多余的 Panel 容器
-调整了 HeaderBackground 的布局属性
- 简化了控件结构，提高了代码可读性

--- a/src/Huskui.Avalonia/Controls/Toast.axaml
+++ b/src/Huskui.Avalonia/Controls/Toast.axaml
@@ -30,17 +30,9 @@
                                               ContentTemplate="{TemplateBinding ContentTemplate}"
                                               Padding="{TemplateBinding Padding}" />
                         </ScrollViewer>
-                        <Panel VerticalAlignment="Top">
-                            <Border Name="HeaderBackground" IsVisible="{TemplateBinding IsHeaderVisible}"
-                                    CornerRadius="{TemplateBinding CornerRadius,Converter={x:Static local:CornerRadiusConverters.Upper}}"
-                                    Background="{StaticResource OverlaySolidBackgroundBrush}">
-                                <Border.Opacity>
-                                    <MultiBinding Converter="{x:Static local:InternalConverters.OffsetToOpacity}">
-                                        <Binding ElementName="ScrollViewer" Path="Offset" />
-                                        <Binding ElementName="HeaderBackground" Path="Bounds.Height" />
-                                    </MultiBinding>
-                                </Border.Opacity>
-                            </Border>
+                        <Border Name="HeaderBackground" VerticalAlignment="Top"
+                                IsVisible="{TemplateBinding IsHeaderVisible}"
+                                CornerRadius="{TemplateBinding CornerRadius,Converter={x:Static local:CornerRadiusConverters.Upper}}">
                             <DockPanel Margin="{StaticResource ToastHeaderlessContentMargin}">
                                 <Button Padding="8" CornerRadius="{StaticResource FullCornerRadius}"
                                         Theme="{StaticResource OutlineButtonTheme}"
@@ -61,7 +53,7 @@
                                     </ContentPresenter.Styles>
                                 </ContentPresenter>
                             </DockPanel>
-                        </Panel>
+                        </Border>
                     </Panel>
                 </Border>
             </ControlTemplate>
