--- a/src/Huskui.Avalonia/Controls/Toast.axaml
+++ b/src/Huskui.Avalonia/Controls/Toast.axaml
@@ -2,9 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="https://github.com/d3ara1n/Huskui.Avalonia"
                     xmlns:fi="using:FluentIcons.Avalonia">
-    <Thickness x:Key="ToastContentMargin">24,68,24,20</Thickness>
+    <Thickness x:Key="ToastContentMargin">24,70,24,20</Thickness>
     <Thickness x:Key="ToastHeaderlessContentMargin">24</Thickness>
-    <Thickness x:Key="ToastHeaderContentMargin">0,68,0,0</Thickness>
+    <Thickness x:Key="ToastHeaderContentMargin">0,70,0,0</Thickness>
     <Thickness x:Key="ToastToplessContentMargin">24,0,24,24</Thickness>
     <ControlTheme x:Key="{x:Type local:Toast}" TargetType="local:Toast">
         <Setter Property="Background" Value="{StaticResource FlyoutBackgroundBrush}" />
@@ -34,11 +34,13 @@
                                 IsVisible="{TemplateBinding IsHeaderVisible}"
                                 CornerRadius="{TemplateBinding CornerRadius,Converter={x:Static local:CornerRadiusConverters.Upper}}">
                             <DockPanel Margin="{StaticResource ToastHeaderlessContentMargin}">
-                                <Button Padding="8" CornerRadius="{StaticResource FullCornerRadius}"
+                                <Button Padding="8" VerticalAlignment="Top"
+                                        CornerRadius="{StaticResource FullCornerRadius}"
                                         Theme="{StaticResource OutlineButtonTheme}"
                                         DockPanel.Dock="Right" IsCancel="True"
                                         Command="{Binding Dismiss,RelativeSource={RelativeSource Mode=TemplatedParent}}">
-                                    <fi:SymbolIcon Symbol="Dismiss" Height="16" Width="16" />
+                                    <fi:SymbolIcon Symbol="Dismiss" Height="{StaticResource LargeFontSize}"
+                                                   Width="{StaticResource LargeFontSize}" />
                                 </Button>
                                 <ContentPresenter Content="{TemplateBinding Header}"
                                                   ContentTemplate="{TemplateBinding HeaderTemplate}"
