--- a/src/Huskui.Avalonia/Controls/Slider.axaml
+++ b/src/Huskui.Avalonia/Controls/Slider.axaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:husk="https://github.com/d3ara1n/Huskui.Avalonia">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
         <Panel Background="White">
             <StackPanel Margin="24" Spacing="12">
