style(Huskui.Avalonia): 调整卡片颜色并优化滚动条动画
- 将卡片颜色从 Gray2Color 更改为 White7Color，以提高可读性和一致性
- 在水平和垂直滚动条中添加 Opacity 属性的动画过渡，提升用户体验

--- a/src/Huskui.Avalonia/Controls/ScrollViewer.axaml
+++ b/src/Huskui.Avalonia/Controls/ScrollViewer.axaml
@@ -24,9 +24,24 @@
                         </ScrollContentPresenter.GestureRecognizers>
                     </ScrollContentPresenter>
                     <ScrollBar Name="PART_HorizontalScrollBar"
-                               Orientation="Horizontal" VerticalAlignment="Bottom" />
+                               Orientation="Horizontal" VerticalAlignment="Bottom">
+                        <ScrollBar.Transitions>
+                            <Transitions>
+                                <DoubleTransition Property="Opacity"
+                                                  Duration="{StaticResource ControlFasterAnimationDuration}" />
+                            </Transitions>
+                        </ScrollBar.Transitions>
+                    </ScrollBar>
                     <ScrollBar Name="PART_VerticalScrollBar"
-                               Orientation="Vertical" HorizontalAlignment="Right" />
+                               Orientation="Vertical" HorizontalAlignment="Right">
+
+                        <ScrollBar.Transitions>
+                            <Transitions>
+                                <DoubleTransition Property="Opacity"
+                                                  Duration="{StaticResource ControlFasterAnimationDuration}" />
+                            </Transitions>
+                        </ScrollBar.Transitions>
+                    </ScrollBar>
                 </Panel>
             </ControlTemplate>
         </Setter>
